Menambahkan Pengalaman baru

--- a/index.html
+++ b/index.html
@@ -240,7 +240,18 @@
                         <li>Mencuci Peralatan Operasional</li>
                         <li>Menutup Outlet</li>
                     </ul>
-
+                </div>
+                <div class="ex-isi enam-exF">
+                    <img src="" alt="">
+                    <h2>PT. Kartika Sari Inti Sejati</h2>
+                    <h3><i>Operator Produksi<br></i>(20/02/2024 - 20/07/2024)</h3>
+                    <ul>
+                        <li>Cleaning Loyang</li>
+                        <li>Panning Roti</li>
+                        <li>Potong Roti</li>
+                        <li>Poles Roti</li>
+                        <li>Packing Bagelen</li>
+                    </ul>
                 </div>
             </div>
             <!-- </div> -->
